# phrm

./: .cache_ggshield  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AI_CHAT_FIX_SUMMARY.md  API_TOKEN_MANAGEMENT.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CURRENT_STATUS.md  DASHBOARD_STREAMLINING_SUMMARY.md  DEPENDENCY_SETUP_COMPLETE.md  DOCUMENTATION.md  ENHANCED_FEATURES_SUMMARY.md  ENHANCED_PHRM_README.md  FAMILY_MEMBER_AI_INTEGRATION.md  FAMILY_MEMBER_ENHANCEMENTS.md  FINAL_CLEANUP_SUMMARY.md  FINAL_COMMIT_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_RESOLUTION.md  FIX_SUMMARY.md  GOOGLE_SEARCH_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  LOGIN_TROUBLESHOOTING.md  MEDGEMMA_ACCESS_GUIDE.md  MEDGEMMA_REMOTE_ONLY_SUMMARY.md  MODERN_UI_SUMMARY.md  Makefile  OPTIMIZATION.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_PLAN.md  PROJECT_SUMMARY.md  RAG_PURGE_SUMMARY.md  README.md  RESOLUTION_COMPLETE.md  RESOLUTION_SUMMARY.md  STREAMLINING_COMPLETE.md  STRUCTURE.md  (+64 more)
app/: __init__.py  admin_utils.py  config.py  config_optimized.py
app/ai/: __init__.py  summarization.py
app/ai/providers/: __init__.py
app/ai/routes/: __init__.py  chat.py  chat_new.py  rag.py  summarization.py
app/api/: __init__.py  backup_api.py  medication_api.py
app/appointments/: __init__.py  forms.py
app/auth/: __init__.py
app/backup/: __init__.py
app/chat/: __init__.py
app/health/: __init__.py
app/main/: __init__.py
app/medications/: __init__.py
app/members/: __init__.py
app/models/: __init__.py
app/models/ai_audit/: __init__.py  audit_log.py  compliance.py  data_access.py  metrics.py
app/models/core/: appointment.py  base.py  chat_message.py  current_medication.py  health_record.py  medical_condition.py  prescription.py  user.py
app/models/security/: __init__.py  security_event.py
app/ops/: __init__.py
app/records/: __init__.py  file_utils.py  forms.py  services.py
app/records/routes/: __init__.py  dashboard.py  export.py  family_members.py  files.py  medical_conditions.py  records.py  records_new.py
app/static/css/: app.css  base.css  chat.css  components.css  dark-mode.css  enhanced-chat.css  health-records.css  health-records.css.backup  main.css  mobile-responsive.css  modern-ui.css  optimized.min.css
app/static/js/: app-optimized.js  app.js  chat-manager-optimized.js  chat-manager.js  core-utils.js  dashboard.js  document-processing.js  enhancements.js  main.js  modern-ui.js  optimized.min.js  ui-manager.js  utils-optimized.js  utils.js
app/templates/: base.html  index.html  macros.html
app/templates/ai/: chat.html  chatbot.html  summarize.html  symptom_checker.html  vectorize_documents.html  view_summary.html
app/templates/appointments/: add.html  list.html  view.html
app/templates/auth/: admin_add_user.html  admin_dashboard.html  admin_edit_user.html  admin_login.html  admin_medications.html  admin_users.html  change_password.html  delete_account.html  dev_reset_links.html  login.html  notification_preferences.html  profile.html  register.html  reset_password.html
app/templates/errors/: 404.html  500.html
app/templates/records/: _current_medications_table.html  _prescription_table.html  create.html  dashboard.html  dashboard_clean.html  edit.html  enhanced_dashboard.html  family_form.html  family_list.html  family_profile.html  list.html  view.html
app/utils/: __init__.py  ai_helpers.py  ai_helpers.py.deprecated  ai_security_stubs.py  ai_utils.py  auth_decorators.py  backup.py  backup_manager.py  config_manager.py  deepseek_helpers.py  drug_interactions.py  email_utils.py  export_utils.py  form_validators.py  global_health_integration_simple.py  groq_helpers.py  health_metrics.py  health_status.py  huggingface_helpers.py  input_sanitization.py  local_rag.py  medical_condition_ai.py  medication_interactions.py  medicine_interaction.py  notification_system.py  optimized_templates.py  performance.py  performance_cli.py  performance_monitor.py  production_config.py  query_processor.py  redis_cache.py  response_headers.py  search_utils.py  security_utils.py  shared.py  stubs.py  template_utils.py  unified_cache.py  vectorization.py  (+1 more)
debbuild/DEBIAN/: control  postinst
docs/: CLEANUP_SUMMARY.md  DOCUMENTATION.md  ENHANCED_DEPLOYMENT_GUIDE.md  PRE_COMMIT_RESOLUTION.md
local/: README_LOCAL.txt  README_MIGRATED.txt
local/scripts/: README_SCRIPTS.txt  check_login.py
local/templates/: README_TEMPLATES.txt
migrations/: env.py
migrations/versions/: 4466eebf2e74_add_missing_investigations_and_review_.py  60b773dd37d4_add_appointments_and_enhanced_models.py  a89f60fbac28_add_current_medications_table_for_.py  b824cd4a4c1d_add_prescription_entries_table.py  c8b95feb62a0_initial_migration_with_password_reset_.py  c8b95feb62a0_optimized_migration.py  database_optimization_indexes.py  enhance_health_records_001_add_enhanced_health_record_fields.py  medical_conditions_001_add_medical_condition_tables.py
phrm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: README.md  list_routes.py  make_admin.py  quick_start.py  rag_manager.py  run_vectorization.sh  start-redis.sh  stop-redis.sh  vectorize_references.py  verify.py
scripts/database/: setup_system.py
scripts/diagnostics/: system_diagnostics.py
scripts/maintenance/: system_maintenance.py
templates/records/: view.html
tests/: conftest.py  test_basic.py
trash2review/: ADMIN_LOGIN_RESOLUTION.md  ADMIN_USER_SYSTEM_COMPLETE.md  ANDROID_APK_SUMMARY.md  COMPLETE_ADMIN_USER_SYSTEM.md  ENHANCED_ADMIN_SYSTEM_SUMMARY.md  ENHANCED_DASHBOARD_SUMMARY.md  FINAL_UPDATE_SUMMARY.md  LOGIN_CREDENTIALS.md  MEDICATION_VERIFICATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  check_admin_user.py  check_login.py  comprehensive_diagnosis.py  comprehensive_diagnostics.py  detailed_restore.py  diagnose.py  force_restore.py  migrate_admin_family.py  reset_password.py  restore_backup.py  setup_admin.py  setup_complete_system.py  setup_database.py  verify_admin_system.py
trash2review/js-legacy/: app.js  main-optimized.js
(+27 files in other folders)
