[project]
name = "phrm"
version = "1.0.0"
description = "Personal Health Record Manager"
requires-python = ">=3.9"

dependencies = [
    "Flask>=3.1.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "Flask-WTF>=1.2.2",
    "Flask-Migrate>=4.0.7",
    "Flask-Mail>=0.10.0",
    "Flask-Limiter>=3.8.0",
    "Flask-Talisman>=1.1.0",
    "WTForms>=3.2.1",
    "bcrypt>=4.2.1",
    "cryptography>=43.0.0",
    "SQLAlchemy>=2.0.30",
    "redis>=5.2.0",
    "Flask-Caching>=2.3.0",
    "gunicorn>=22.0.0",
    "gevent>=24.2.1",
    "requests>=2.32.3",
    "aiohttp>=3.12.0",
    "pypdf>=3.0.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.4.0",
    "chromadb>=0.4.0",
    "langchain>=0.3.12",
    "langchain-community>=0.3.12",
    "langchain-openai>=0.2.14",
    "python-dotenv>=1.0.1",
    "psutil>=6.0.0",
    "Werkzeug>=3.1.0",
    "click>=8.1.7",
    "itsdangerous>=2.2.0",
    "MarkupSafe>=3.0.0",
    "Jinja2>=3.1.4",
    "blinker>=1.9.0",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.1",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-flask>=1.3.0",
    "ruff>=0.11.13",
    "isort>=6.0.1",
]

test = [
    "pytest>=8.4.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=6.2.1",
    "coverage>=7.9.1",
]

optional = [
    "psycopg2-binary>=2.9.9",
    "openai>=1.50.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=app", "--cov-report=term-missing", "-W", "ignore::DeprecationWarning"]
filterwarnings = [
    "ignore::DeprecationWarning:*swigvarlink*",
    "ignore::DeprecationWarning:*SwigPyObject*",
    "ignore::DeprecationWarning:*SwigPyPacked*",
    "ignore::DeprecationWarning"
]
